refact:[step3] List.of 사용으로 수정